--- a/requirements.txt
+++ b/requirements.txt
@@ -116,3 +116,12 @@ wcwidth==0.2.13
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
+beautifulsoup4==4.12.3
+bs4==0.0.2
+certifi==2024.8.30
+charset-normalizer==3.4.0
+gb-quickstart-assistant==0.0.1
+idna==3.10
+requests==2.32.3
+soupsieve==2.6
+urllib3==2.2.3
