--- a/requirements.txt
+++ b/requirements.txt
@@ -27,8 +27,8 @@ tensorflow==2.10.0; sys_platform != 'darwin' # Windows & Ubuntu Intel chips
 
 # prevent bq 3+ db-dtypes package error when running training from bq
 
-mlflow==2.1.1
-prefect==2.19.2
+#mlflow==2.1.1
+#prefect==2.19.2
 
 python-dotenv
 psycopg2-binary
@@ -45,6 +45,9 @@ uvicorn
 #webapp
 streamlit
 
-#jupyter notebook
-jupyterlab
-notebook
+
+transformers
+langchain-community
+langchain-text-splitters
+llama-index
+sentence-transformers
