--- a/requirements.txt
+++ b/requirements.txt
@@ -17,12 +17,12 @@ scikit-learn==1.3.1
 #google-api-core==2.8.2
 #googleapis-common-protos==1.56.4
 protobuf==3.19.0
-h5py==3.11.0
+h5py
 db-dtypes
 pyarrow
 # Trick to install the version of Tensorflow depending on your processor: darwin == Mac, ARM == M1
-# tensorflow-macos==2.10.0; sys_platform == 'darwin' and 'ARM' in platform_version # Mac M-chips
-# tensorflow==2.10.0; sys_platform == 'darwin' and 'ARM' not in platform_version # Mac Intel chips
+tensorflow-macos==2.10.0; sys_platform == 'darwin' and 'ARM' in platform_version # Mac M-chips
+tensorflow==2.10.0; sys_platform == 'darwin' and 'ARM' not in platform_version # Mac Intel chips
 tensorflow==2.10.0; sys_platform != 'darwin' # Windows & Ubuntu Intel chips
 
 # prevent bq 3+ db-dtypes package error when running training from bq
@@ -35,7 +35,7 @@ psycopg2-binary
 
 huggingface-hub
 dill==0.3.6
-#PyPDF2
+PyPDF2
 
 # API
 fastapi==0.108.0
